Another big round of compile-error fixes